sites/all/themes/invoicely/css/invoicely.css
.container {
    max-width: 1600px;
}
.dash_chart{
    width: 500px;
    height: 250px;
    float: right;
    display: block;
}

.git-revision{
    position: fixed;
    top: 0;
    right: 0;
    font-size: 9px;
    font-family: verdana, arial, sans-serif;
    color: #DDDDDD;
    font-style: italic;
}
.git-revision a.forkme{
    background-image: url(https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png);
    float: right;
    display: block;
    height: 149px;
    width: 149px;
    clear: right;
}
.git-revision a.revision{
    color: #DDDDDD;
    float: right;
    display: block;
    clear: right;
}

